power: Avoid crasher if XRandR calls fail on startup

In between a start()/stop() pairing, if gnome_rr_screen_new()
somehow returns NULL, exit the start() function earlier, before
anything is set up. This helps avoid a crash where the x11_screen
could be used by just-set-up signals.

https://bugzilla.gnome.org/show_bug.cgi?id=672245